@@ -463,8 +463,11 @@ name|CombineHiveInputSplit
 implements|implements
 name|InputSplitShim
 block|{
+specifier|static
 name|String
 name|inputFormatClassName
+init|=
+literal|null
 decl_stmt|;
 name|InputSplitShim
 name|inputSplitShim
@@ -528,10 +531,16 @@ name|inputSplitShim
 operator|=
 name|inputSplitShim
 expr_stmt|;
+comment|// get the inputFormatClassName only once because it will be the same
+comment|// for all input files within the same input split.
 if|if
 condition|(
 name|job
 operator|!=
+literal|null
+operator|&&
+name|inputFormatClassName
+operator|==
 literal|null
 condition|)
 block|{
@@ -564,23 +573,6 @@ operator|.
 name|getPaths
 argument_list|()
 decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|ipaths
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
 name|PartitionDesc
 name|part
 init|=
@@ -590,19 +582,10 @@ name|pathToPartitionInfo
 argument_list|,
 name|ipaths
 index|[
-name|i
+literal|0
 index|]
 argument_list|)
 decl_stmt|;
-comment|// create a new InputFormat instance if this is the first time to see
-comment|// this class
-if|if
-condition|(
-name|i
-operator|==
-literal|0
-condition|)
-block|{
 name|inputFormatClassName
 operator|=
 name|part
@@ -613,25 +596,6 @@ operator|.
 name|getName
 argument_list|()
 expr_stmt|;
-block|}
-else|else
-block|{
-assert|assert
-name|inputFormatClassName
-operator|.
-name|equals
-argument_list|(
-name|part
-operator|.
-name|getInputFileFormatClass
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-assert|;
-block|}
-block|}
 block|}
 block|}
 specifier|public
